<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">
    <EditText
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:hint="@string/weightHint"
        android:inputType="number"
        android:maxLength="3"
        android:autofillHints="weight"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editWeight"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints="Height"
        android:hint="@string/heightFtHint"
        android:inputType="number"
        android:maxLength="3"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:id="@+id/editHeightFt"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:hint="@string/heightInHint"
        android:id="@+id/editHeightIn"
        android:autofillHints="Height"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="3"
        android:singleLine="true"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculateBMI"
        android:backgroundTint="@color/bmiCalc"
        android:id="@+id/bmiCalculate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/resultBmi"
        android:textSize="25sp"
        android:id="@+id/bmiResult"/>

</LinearLayout>
